set background attachment to fixed on mobile, so it doesn't scroll to blackness on portrait. Also made all ghosts have the blue hue, rather than just on desktop.

--- a/src/components/Episode/styles.scss
+++ b/src/components/Episode/styles.scss
@@ -1,5 +1,3 @@
-$fade-color: var(--background_color);
-
 // Mobile Portrait
 .wrapper {
 	position: relative;
@@ -21,6 +19,11 @@ $fade-color: var(--background_color);
 		}
 
 			.episode, 
+			.title {
+				text-shadow: 1px 1px var(--background_color);
+			}
+	
+			.episode, 
 			.title, 
 			.body>.paragraph {
 				animation-name: fade-in-slide-up;
@@ -32,7 +35,7 @@ $fade-color: var(--background_color);
 
 			.episode {
 				order: 1;
-				margin-bottom: 1.62em;
+				margin-bottom: 0.62em;
 				font-size: 1em;
 				font-family: var(--font_family__heading);
 				animation-delay: 0.5s;
@@ -47,11 +50,11 @@ $fade-color: var(--background_color);
 
 			.body {
 				order: 3;
-				margin-top: 1.5em;
+				margin-top: 0.62em;
 				margin-bottom: 1.5em;
 				line-height: 1.5;
 				overflow-y: hidden;
-				font-size: 1em;
+				font-size: 1rem;
 				font-family: var(--font_family__body);
 			}
 
@@ -69,18 +72,19 @@ $fade-color: var(--background_color);
 				left: 0;
 				z-index: 2;
 				background-image: linear-gradient(
-				    rgba($fade-color, 0) 0%,
-				    rgba($fade-color, 1) 80%,
-				    rgba($fade-color, 1) 100%	
+				    rgba(255, 255, 255, 0) 0%,
+				    var(--background_color) 70%,
+				    var(--background_color) 100%	
 				);
 			}
 
 	.watchNow {
 		order: 5;
 		position: relative;
-		margin-bottom: 3em;
+		margin-bottom: 5em;
     	border-color: #4e4e4e;
     	opacity: 1;
+    	z-index: 1;
 		animation: none;
 	}
 
@@ -94,13 +98,17 @@ $fade-color: var(--background_color);
 		.content {
 			order: 1;
 			width: 50%;
-			padding-left: 5%;
+			padding-top: 10%;
 			padding-right: 5%;
+			padding-left: 5%;
 			justify-content: center;
 		}
 
+			.fade {
+				height: 5em;
+			}
+
 	.watchNow {
-		margin-bottom: 0em;
 	}
 }
 
@@ -112,8 +120,15 @@ $fade-color: var(--background_color);
 
 		.content {
 			padding: 10%;
-			font-size: 1.62rem;
 		}
+
+			.episode {
+				margin-bottom: 0;
+			}
+
+			.title, .body {
+				margin-top: 0.62em;
+			}
 }
 
 //Tablet landscape
@@ -125,7 +140,6 @@ $fade-color: var(--background_color);
 		.content {
 			padding-left: 5%;
 			padding-right: 5%;
-			font-size: 1.3rem;
 		}
 }
 
@@ -164,7 +178,6 @@ $fade-color: var(--background_color);
 		padding-left: 0;
 		padding-right: 17.25em;
 		align-self: flex-end;
-		font-size: 1rem;
 	}
 }
 
