--- a/src/components/Episodes/styles.scss
+++ b/src/components/Episodes/styles.scss
@@ -1,9 +1,20 @@
+// MOBILE
 .wrapper {
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	background-image: url("assets/2d/episodes/episode-bg-large.jpg");
-}
+	background-attachment: fixed;
 
 	.list {
 		height: 100%;
 	}
+}
+
+// TABLET UP
+@media (min-width: 768px) {
+	.wrapper {
+		width: 100%;
+		height: 100%;
+		background-attachment: none;
+	}
+}
