--- a/src/components/EpisodesNav/styles.scss
+++ b/src/components/EpisodesNav/styles.scss
@@ -4,7 +4,7 @@
 	width: 80%;
 	right: 50%;
 	bottom: 5%;
-	z-index: 2;
+	z-index: 3;
 	transform: translateX(50%);
 }
 
