--- a/src/shared/fonts.scss
+++ b/src/shared/fonts.scss
@@ -2,7 +2,7 @@
 
 h1, h2 { 
 	font-weight: normal;
-	letter-spacing: 0.1em;
+	// letter-spacing: 0.1em;
 }
 
 html {
